Add RecyclerView & input validation

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.NotBored">
         <activity
-            android:name=".presentation.ActivitiesActivity"
+            android:name=".presentation.activities.ActivitiesActivity"
             android:exported="false" />
         <activity
             android:name=".presentation.TermsAndConditionsActivity"
